--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap');
 * {
   box-sizing: border-box;
 }
@@ -5,15 +6,59 @@
 body {
   background-color: #111;
   display: flex;
+  flex-direction: column;
   align-items: center;
+  align-content:  flex-start;
   justify-content: center;
-  height: 100vh;
-  overflow: hidden;
   margin: 0;
+  position: relative;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 } 
 
-.container {
+.rotate-button-div{
+  position: absolute;
+  top:0;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cont-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top:20%;
+  height: 60%;
+}
+
+.info-cont-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top:80%;
+  height: 20%;
+}
+
+.rotate-button{
+  width: 50px;
+  height: 50px;
+  background-color:#1d1d1d;
+  outline: none;
+  border: none;
+  color:#C0C0C0;
+  font-size: 20px;
   display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -22,13 +67,59 @@ body {
   transform: rotate(45deg);
 }
 
+.info-cont {
+  display:flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding: 20px 18px;
+  justify-content: space-between;
+  height: 84px;
+  width: 258px;
+  background: #1d1d1d;
+  box-shadow: 0 0 2px #000;
+  transition: opacity 0.15s ease;
+}
+
+.info-cont h4 {
+  color:  #C0C0C0;
+  text-align: center;
+  font-family: 'Gemunu Libre', sans-serif;
+}
+
+.info-cont .close-btn {
+  height: 30px;
+  width: 30px;
+  border-radius: 2px;
+  background-color: rgb(21, 21, 21);
+  outline: none;
+  border: none;
+  color: #aaa;
+  font-size: 13px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-cont .info-color{
+  height: 50px;
+  width: 50px;
+  background: #000;
+}
+
+.info-cont .close-btn:hover, 
+.rotate-button:hover {
+  background-color: rgb(46, 46, 46);
+  color:#fff;
+  cursor: pointer;
+}
+
 .square {
   width: 16px;
   height: 16px;
   background: #1d1d1d;
   margin: 2px;
   box-shadow: 0 0 2px #000;
-  transition: 2s ease;
+  transition: 2.5s steps(5, jump-none);
 }
 
 .square:hover{
